--- a/code/graphing.Rmd
+++ b/code/graphing.Rmd
@@ -92,6 +92,7 @@ p <- df_seg %>%
     color = "Preference"
   )
 ggsave(filename = "graph1.jpg", plot = p, device = "jpg", width = 8, height = 5)
+p
 ```
 
 ```{r}
@@ -112,7 +113,6 @@ p <- df_seg %>%
     )
   ) +
   geom_line(aes(color = preference), size = 1) +
-  # geom_point(aes(color = preference), size = 1) +
   theme_minimal() +
   facet_wrap(~ percent_hetero) +
   labs(
@@ -122,10 +122,6 @@ p <- df_seg %>%
     color = "Preference"
   )
 ggsave(filename = "graph2.jpg", plot = p, device = "jpg", width = 8, height = 5)
-
-
-
-
 
 ```
 
@@ -138,7 +134,6 @@ df_seg %>%
   mutate(
     preference = as.character(preference)
   ) %>%
-  # filter(radius == 1) %>%
   ggplot() +
   geom_line(
     aes(
@@ -195,18 +190,16 @@ ggsave(filename = "graph3.jpg", plot = p, device = "jpg", width = 8, height = 5)
 df_seg %>%
   group_by(preference,percent_hetero,radius) %>%
   summarize(
-    segregation = mean(segregation) #%>% round(2) %>% as.character()
+    segregation = mean(segregation)
   ) %>%
   filter(preference != 0.325) %>%
   ggplot() +
   geom_tile(
     aes(
-      # x = percent_hetero,
       x = radius,
       y = preference, 
       fill = segregation
     )) +
-  # facet_wrap(~radius) +
   facet_wrap(~percent_hetero) +
   theme_minimal() +
   scale_fill_viridis(option="plasma")
